# jenny

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  generate_docs.sh  requirements.txt  run_checks_and_build.sh  setup.sh
Dockerfiles/: Dockerfile.ca-build  Dockerfile.ca-build-archlinux  Dockerfile.ca-cppcheck-archlinux  Dockerfile.doxygen-debian
docs/: Doxyfile
docs/uml/: Project Concept.mdj
scripts/: cmake  generate_docs.sh  make  run_checks_and_build.sh
src/: main.cpp  main.py
src/adapters/gui/qt-ui-components/: textinterface.ui
